<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white_primary">

    <ScrollView
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center_horizontal"

            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="18dp"

                android:src="@drawable/icone_success"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"

                style="@style/bold_text_style"
                android:text="@string/screen_title"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/emission_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"

                style="@style/normal_text_style"
                android:text="00/00/0000, 00:00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginHorizontal="8dp"

                style="@style/normal_text_style"
                android:text="@string/confirmation_period"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"

                style="@style/normal_text_style"
                android:text="@string/bill_value"/>

            <TextView
                android:id="@+id/value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                style="@style/bold_text_style"
                android:textSize="32sp"
                android:text="R$ 999.999,00"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                style="@style/normal_text_style"
                android:text="@string/expiration_date"/>

            <TextView
                android:id="@+id/expiration_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:layout_marginBottom="64dp"

                style="@style/bold_text_style"
                android:textSize="20sp"
                android:text="00/00/0000"/>
        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/copy_button"
                android:layout_width="100dp"
                style="@style/buttons_style"
                android:drawableTop="@drawable/ic_baseline_content_copy_24"
                android:text="@string/copy_barcode"/>

            <Button
                android:id="@+id/open_button"
                android:layout_width="100dp"
                style="@style/buttons_style"
                android:drawableTop="@drawable/ic_outline_description_24"
                android:text="@string/open_document"/>

            <Button
                android:id="@+id/share_button"
                android:layout_width="100dp"
                style="@style/buttons_style"
                android:drawableTop="@drawable/ic_outline_share_24"
                android:text="@string/share_document"/>
        </LinearLayout>
    </HorizontalScrollView>
</android.support.constraint.ConstraintLayout>